<resources>
    <string name="app_name">LibraryTest</string>

    <string-array name="sample_list">
        <item>Arch Sample</item>
        <item>Dagger Sample</item>
        <item>RxJava Sample</item>
        <item>DaggerDate Sample</item>
    </string-array>

    <string name="bt_rx_api">GitHub API Test</string>
    <string name="bt_rx_simple">Simple</string>
    <string name="bt_rx_map">Map</string>
    <string name="bt_rx_zip">Zip</string>
    <string name="bt_rx_disposable">Disposable</string>
    <string name="bt_rx_take">Take</string>
    <string name="bt_rx_timer">Timer</string>
    <string name="bt_rx_interval">Interval</string>
    <string name="bt_rx_single_observer">SingleObserver</string>
    <string name="bt_rx_completable_observer">CompletableObserver</string>
    <string name="bt_rx_flowable">Flowable</string>
    <string name="bt_rx_reduce">Reduce</string>
    <string name="bt_rx_buffer">Buffer</string>
    <string name="bt_rx_filter">Filter</string>
    <string name="bt_rx_skip">Skip</string>
    <string name="bt_rx_scan">Scan</string>
    <string name="bt_rx_replay">Replay</string>
    <string name="bt_rx_concat">Concat</string>
    <string name="bt_rx_merge">Merge</string>
    <string name="bt_rx_defer">Defer</string>
    <string name="bt_rx_distinct">Distinct</string>
    <string name="bt_rx_last_operator">LastOperator</string>
    <string name="bt_rx_replay_subject">ReplaySubject</string>
    <string name="bt_rx_publish_subject">PublishSubject</string>
    <string name="bt_rx_behavior_subject">BehaviorSubject</string>
    <string name="bt_rx_async_subject">AsyncSubject</string>
    <string name="bt_rx_throttle_first">ThrottleFirst</string>
    <string name="bt_rx_throttle_last">ThrottleLast</string>
    <string name="bt_rx_debounce">Debounce</string>
    <string name="bt_rx_window">Window</string>
    <string name="bt_rx_delay">Delay</string>
    <string name="bt_rx_switch_map">SwitchMap</string>


</resources>
